Fixed limited release text on mobile

--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -125,7 +125,7 @@ h6 {
     
 
     .intro-message {
-        padding-top: 80%;
+        padding-top: 120%;
         padding-bottom: 100px;
 
     }
@@ -136,14 +136,25 @@ h6 {
     padding-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
-    padding-bottom: 10px
+    padding-bottom: 10px;
     
     }
 
-    .btn{
+    .btn.btn-primary.btn-lg.btn-block{
         width: 100px;
         margin: 0 auto;
 
+    }
+
+    .preview-text{
+        color: black;
+    }
+
+    .form-control.email-field {
+
+        width: 200px;
+        margin: 0 auto;
+        text-align: center;
     }
 
     .email-input {
